Fix spacing on nav links

--- a/css/main.css
+++ b/css/main.css
@@ -4,5 +4,5 @@
 
 .anchor-link {
     margin-top: -2vh;
-    margin-left: -56vw;
+    margin-left: -105%;
 }
